--- a/weather-co/src/main/resources/application.properties
+++ b/weather-co/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=weather-co
-openweather.api.key=581776a53bd374ca43aa3f1d6bc6afdc
+openweather.api.key=api_key
 
-spring.datasource.url=jdbc:mysql://localhost:3306/weatherdbb
+spring.datasource.url=jdbc:mysql://localhost:3306/db_name
 spring.datasource.username=root
-spring.datasource.password=rootuser@12
+spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
